--- a/styles/styles.css
+++ b/styles/styles.css
@@ -97,11 +97,12 @@
 }
 
 .container-title-inicio {
+  position: relative;
   display: flex;
   align-items: center;
   z-index: 2;
   color: white;
-  /* background-color: lightcoral; */
+
 }
 
 
@@ -123,6 +124,10 @@
 }
 
 .text-title-inicio2 {
+  display: none;
+}
+
+.container-text-animation {
   display: none;
 }
 
@@ -945,10 +950,11 @@
 }
 
 
+
+
 /* Media Queri para dispositivos pequeños */
 
 @media screen and (max-width: 767px) {
-
 
   .body-p {
     padding: 0.5rem;
@@ -959,48 +965,158 @@
   }
 
   .main-box-inicio {
-    height: 50vh;
+    height: 60vh;
   }
 
   .text-title-inicio {
     display: none;
   }
 
-  .text-title-inicio2 {
+  /* .text-title-inicio2 {
     font-size: 2rem;
     display: block;
     text-align: center  ;
+  } */
+
+  
+
+  .content {
+    display: block;
+    position: absolute;
+    top: 50%;
+    /* Cambiado de 50% a 0 */
+    left: 50%;
+    transform: translate(-50%,0);
+    /* Eliminado el desplazamiento vertical */
+    height: 160px;
+    overflow: hidden;
+    font-family: 'Lato', sans-serif;
+    font-size: 35px;
+    line-height: 40px;
+    color: white;
   }
 
-  .img-asteroide, .img-asteroide2{
+  .content__container {
+    font-weight: 600;
+    overflow: hidden;
+    height: 40px;
+    padding: 0 40px;
+  }
+
+  .content__container:before {
+    content: '[';
+    left: 0;
+  }
+
+  .content__container:after {
+    content: ']';
+    position: absolute;
+    right: 0;
+  }
+
+  .content__container:before,
+  .content__container:after {
+    position: absolute;
+    top: 0;
+    color: #16a085;
+    font-size: 42px;
+    line-height: 40px;
+    animation-name: opacity;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+  }
+
+
+
+  .content__container__list {
+    margin-top: 0;
+    /* padding-left: 110px; */
+    padding-right: 50%;
+
+    text-align: center;
+    list-style: none;
+    animation-name: change;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+  }
+
+  .content__container__list__item {
+    line-height: 40px;
+
+  }
+
+  @keyframes opacity {
+
+    0%,
+    100% {
+      opacity: 0;
+    }
+
+    50% {
+      opacity: 1;
+    }
+  }
+
+  @keyframes change {
+
+    0%,
+    12.66%,
+    100% {
+      transform: translate3d(0, 0, 0);
+    }
+
+    16.66%,
+    29.32% {
+      transform: translate3d(0, -25%, 0);
+    }
+
+    33.32%,
+    45.98% {
+      transform: translate3d(0, -50%, 0);
+    }
+
+    49.98%,
+    62.64% {
+      transform: translate3d(0, -75%, 0);
+    }
+
+    66.64%,
+    79.3% {
+      transform: translate3d(0, -50%, 0);
+    }
+
+    83.3%,
+    95.96% {
+      transform: translate3d(0, -25%, 0);
+    }
+  }
+
+
+
+
+
+  .img-asteroide,
+  .img-asteroide2 {
     display: none;
-  }
-
- 
-  .text-inicio {
-    width: 45%;
-    font-weight: 500;
-    font-size: 1rem;
-    text-align: justify;
   }
 
   .text-inicio {
     width: 100%;
     font-weight: 500;
     font-size: 1.1rem;
-    text-align: center;
+    text-align: start;
   }
 
   .btn-x {
-    width: 60%;
+    width: 12rem;
     border-radius: 2rem;
-    height: 50%;
+    height: 3.5rem;
     font-size: 1.3rem;
   }
 
-  .container-button-inicio{
+  .container-button-inicio {
     display: flex;
     justify-content: center;
   }
-  
+
 }
