--- a/styles/styles.css
+++ b/styles/styles.css
@@ -169,7 +169,9 @@
 /* Estilos para la sección de nosotros */
 /* ********************************* */
 
-
+.fila-nosotros-mobile{
+  display: none;
+}
 .container-content-circle {
   width: 35%;
   height: 35%;
@@ -527,11 +529,12 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  
 }
 
 .container-title-tecnologias {
   /* background-color: lightpink; */
-  height: 20%;
+  height: 30%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -543,7 +546,7 @@
 
 .container-description-tecnologias {
   /* background-color: red; */
-  height: 50%;
+  height: 60%;
   width: 95%;
   display: flex;
   justify-content: center;
@@ -559,8 +562,8 @@
 .carrousel-tecnologias {
   display: flex;
   background-color: black;
-  height: 35vh;
-  align-items: center;
+  height: 30vh;
+  /* background-color: rebeccapurple; */
 }
 
 
@@ -1099,7 +1102,7 @@
     width: 100%;
     font-weight: 500;
     font-size: 1.1rem;
-    text-align: start;
+    text-align: center;
   }
 
   .btn-x {
@@ -1116,6 +1119,14 @@
 
 
   /* Sección de nosotros */
+  .fila-nosotros{
+    display: none;
+  }
+
+  .fila-nosotros-mobile{
+    display: block;
+  }
+
   .container-content-nosotros-mobile{
     height: 16rem;
     background-color: #CCCCCC;
@@ -1164,6 +1175,100 @@
     display: flex;
     align-items: center;
     /* background-color: green; */
+  }
+
+  /* Seccción de more-us */
+  .nuevo-div{
+    height: 50vh;
+  }
+
+  .enfoque-v{
+    padding: 0;
+    width: 100%;
+    height: 40vh;
+    margin-top: 2rem;
+  }
+
+
+  /* Sección de Tennologías */
+
+  .carrousel-tecnologias {
+    margin: 0;
+    height: 25vh;
+    width: 90%;
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  
+  .container-description-tecnologias {
+    font-size: 1.2rem;
+    text-align: center;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding: 1rem;
+  }
+
+  .container-title-tecnologias {
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+    margin-top: 2rem;
+  }
+
+  /* Sección de servicios */
+  .container-servicios{
+    width: 100%;
+  }
+
+  .container-item-servicio{
+    width: 100%;
+    height: 70vh;
+    background-color: #CCCCCC;
+    border-radius: 2rem;
+    overflow: hidden;
+  }
+
+
+  .container-title-item-servicio{
+    width: 90%;
+    height: 20%;
+    /* background-color: lightpink; */
+    margin-right: auto;
+    margin-left: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.8rem;
+    font-weight: bold;
+  }
+
+  .container-image-item-servicio{
+    width: 90%;
+    height: 40%;
+    margin-right: auto;
+    margin-left: auto;
+    /* background-color:lightblue; */
+    position: relative;
+  }
+
+  .container-text-item-servicio{
+    width: 90%;
+    height: 40%;
+    margin-right: auto;
+    margin-left: auto;
+    /* background-color: lightgreen; */
+    font-size: 1.4rem;
+    text-align: center;
+    display: flex;
+    padding: 0.5rem;
+  }
+
+  .image-servicio-item{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 }
 
