--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1223,7 +1223,7 @@
 
   .container-item-servicio{
     width: 100%;
-    height: 70vh;
+    height: 35rem;
     background-color: #CCCCCC;
     border-radius: 2rem;
     overflow: hidden;
