--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1227,20 +1227,25 @@
     background-color: #CCCCCC;
     border-radius: 2rem;
     overflow: hidden;
+    /* background-color: lightsalmon; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 
 
   .container-title-item-servicio{
     width: 90%;
-    height: 20%;
+    height: 15%;
     /* background-color: lightpink; */
     margin-right: auto;
     margin-left: auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     font-weight: bold;
+    text-align: center;
   }
 
   .container-image-item-servicio{
@@ -1250,6 +1255,8 @@
     margin-left: auto;
     /* background-color:lightblue; */
     position: relative;
+    border-radius: 1rem;
+    overflow: hidden;
   }
 
   .container-text-item-servicio{
@@ -1258,7 +1265,7 @@
     margin-right: auto;
     margin-left: auto;
     /* background-color: lightgreen; */
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     text-align: center;
     display: flex;
     padding: 0.5rem;
