--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1159,6 +1159,7 @@
     height: 45%;
     display: flex;
     align-items: center;
+    font-size: 1rem;
     /* background-color: green; */
   }
 
