--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1196,7 +1196,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.8rem;
+    font-size: 1.5rem;
   }
 
   .container-text-nosotros-mobile{
@@ -1220,7 +1220,56 @@
   }
 
 
-  /* Sección de Tennologías */
+  /* Sección de more-us mobile */
+  .container-more-us-mobile{
+    width: 100%;
+    background-color: lightpink;
+  }
+
+  .container-imagen-more-us-mobile{
+    width: 100%;
+    background-color: lightcoral;
+    height: 20rem;
+    margin-right: auto;
+    margin-left: auto;
+    position: relative;
+    border-radius: 2rem;
+    overflow: hidden;
+  }
+
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7); /* Fondo oscuro con transparencia */
+    z-index: 1;
+  }
+
+  .text-overlay {
+    width: 90%;
+    font-size: 1.1rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white; /* Color del texto */
+    text-align: center;
+    z-index: 2;
+   
+  }
+
+  .img-mobile-more-us{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  
+
+  /* Sección de Tecnologías */
 
   .carrousel-tecnologias {
     margin: 0;
