seccion nosotros mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1294,6 +1294,10 @@
     margin-left: auto;
   }
 
+  .texts-tecnologias{
+    height: 18rem;
+  }
+
   
   .container-description-tecnologias {
     font-size: 1.2rem;
